--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -10357,6 +10357,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10364,17 +10365,11 @@
     "\n",
     "Analyze your dataset by using Pandas functions to answer the following questions:\n",
     "\n",
-    "1. How many months exist on Mars?\n",
-    "2. How many Martian (and not Earth) days worth of data exist in the scraped dataset?\n",
-    "3. What are the coldest and the warmest months on Mars (at the location of Curiosity)? To answer this question:\n",
-    "    * Find the average the minimum daily temperature for all of the months.\n",
-    "    * Plot the results as a bar chart.\n",
-    "4. Which months have the lowest and the highest atmospheric pressure on Mars? To answer this question:\n",
-    "    * Find the average the daily atmospheric pressure of all the months.\n",
-    "    * Plot the results as a bar chart.\n",
-    "5. About how many terrestrial (Earth) days exist in a Martian year? To answer this question:\n",
-    "    * Consider how many days elapse on Earth in the time that Mars circles the Sun once.\n",
-    "    * Visually estimate the result by plotting the daily minimum temperature.\n"
+    "1. How many months exist on Mars? There are 12 months on Mars\n",
+    "2. How many Martian (and not Earth) days worth of data exist in the scraped dataset? 1867 Martian days worth of data exist in the scrapped dataset.\n",
+    "3. What are the coldest and the warmest months on Mars (at the location of Curiosity)? March is the coldest month on Mars and August is the warmest month on Mars.\n",
+    "4. Which months have the lowest and the highest atmospheric pressure on Mars? June has the lowest atmospheric pressure on Mars and September has the highest atmospheric pressure on Mars.\n",
+    "5. About how many terrestrial (Earth) days exist in a Martian year? Based off of the daily minimum temperature graph, Mars revolves around the sun approximately 3 times in 2000 days. This leads me to believe that a Martian year equals approximately 666 terrestrial (Earth) days. \n"
    ]
   },
   {
@@ -10595,28 +10590,6 @@
     "plt.xlabel(\"Minimum temperature\")\n",
     "plt.ylabel(\"Temperature (°C)\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "On average, the third month has the coldest minimum temperature on Mars, and the eighth month is the warmest. But it is always very cold there in human terms!\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Atmospheric pressure is, on average, lowest in the sixth month and highest in the ninth."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The distance from peak to peak is roughly 1425-750, or 675 days. A year on Mars appears to be about 675 days from the plot. Internet search confirms that a Mars year is equivalent to 687 earth days."
    ]
   },
   {
